# NTRIP_ESP32_Server

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  gps_base_getter.cpp  gps_base_getter.h  index.html  main.cpp  ntrip_credentials_template.h  uart_comm.cpp  uart_comm.h  web_server.cpp  web_server.h  wifi_credentials_template.h
